--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     document.getElementById('btnFormBajas').addEventListener('click', function (event) {
       event.preventDefault();
-      loadContent('formularioBajas');
+      loadContent('formularioBajs');
     });
 
     document.getElementById('btnFormEntrega').addEventListener('click', function (event) {
