--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       // Limpiar contenido previo
       contentContainer.innerHTML = '';
 
-      // Según la página, cargar el contenido
+      // Según a página, cargar el contenido
       switch (page) {
         case 'formularioAltas':
           contentContainer.innerHTML = `
