--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +23,9 @@
                     loading="lazy" /></a>
         </div>
         <div class="menu-header">Menú Principal</div>
-        <div id="profileButton" class="profile-button"><span class="material-icons">account_circle</span></div>
+        <div id="profileButton" class="profile-button">
+            <span class="material-icons">account_circle</span>
+        </div>        
         <!-- Dropdown de perfil -->
         <div id="dropdownMenu" class="dropdown"><a href="#mi-perfil">Mi perfil</a><a
                 href="#configuracion">Configuración</a><a href="#cerrar-sesion">Cerrar sesión</a></div>
