boton de perfil funcional

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             <span class="material-icons">account_circle</span>
         </div>        
         <!-- Dropdown de perfil -->
-        <div id="dropdownMenu" class="dropdown"><a href="#mi-perfil">Mi perfil</a><a
-                href="#configuracion">Configuración</a><a href="#cerrar-sesion">Cerrar sesión</a></div>
+        <div id="dropdownMenu" class="dropdown">
+            <a href="#mi-perfil">Mi perfil</a>
+            <a href="#configuracion">Configuración</a>
+            <a href="#cerrar-sesion">Cerrar sesión</a>
+        </div>
     </header>
     <div class="separator"></div>
     <!-- Sidebar -->
