--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -25,7 +25,7 @@
         <div class="menu-header">Menú Principal</div>
         <div id="profileButton" class="profile-button">
             <span class="material-icons">account_circle</span>
-        </div>        
+        </div>
         <!-- Dropdown de perfil -->
         <div id="dropdownMenu" class="dropdown">
             <a href="#mi-perfil">Mi perfil</a>
@@ -33,63 +33,70 @@
             <a href="#cerrar-sesion">Cerrar sesión</a>
         </div>
     </header>
+
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar inactive">
         <!-- Sección Accesos Rápidos -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">Accesos Rápidos</div>
             <a href="https://marronesgdr.sharepoint.com/" class="menu-button"><i class="fas fa-share"></i>Acceso a
-                SharePoint</a><a href="https://go.microsoft.com/fwlink/p/?LinkID=2125442&amp;deeplink=owa%2F"
-                class="menu-button"><i class="fas fa-envelope"></i>Acceso a Webmail</a><a
-                href="https://onedrive.live.com/login" class="menu-button"><i class="fas fa-cloud"></i>Acceso a
-                OneDrive</a><a
-                href="https://teams.microsoft.com/v2/?lm=deeplink&amp;lmsrc=homePageWeb&amp;cmpid=WebSignIn&amp;culture=en-us&amp;country=us"
+                SharePoint</a>
+            <a href="https://go.microsoft.com/fwlink/p/?LinkID=2125442&amp;deeplink=owa%2F" class="menu-button"><i
+                    class="fas fa-envelope"></i>Acceso a Webmail</a>
+            <a href="https://onedrive.live.com/login" class="menu-button"><i class="fas fa-cloud"></i>Acceso a
+                OneDrive</a>
+            <a href="https://teams.microsoft.com/v2/?lm=deeplink&amp;lmsrc=homePageWeb&amp;cmpid=WebSignIn&amp;culture=en-us&amp;country=us"
                 class="menu-button"><i class="fas fa-users"></i>Acceso a Teams</a>
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección Parte Personal -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">Parte Personal</div>
-            <a href="#" class="menu-button"><i class="fas fa-user"></i>Consultar Datos Personales</a><a href="#"
-                class="menu-button"><i class="fas fa-calendar-alt"></i>Solicitar Permisos</a><a href="#"
-                class="menu-button"><i class="fas fa-certificate"></i>Solicitar Certificados</a>
+            <a href="#" class="menu-button"><i class="fas fa-user"></i>Consultar Datos Personales</a>
+            <a href="#" class="menu-button"><i class="fas fa-calendar-alt"></i>Solicitar Permisos</a>
+            <a href="#" class="menu-button"><i class="fas fa-certificate"></i>Solicitar Certificados</a>
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección Compras -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">Compras</div>
-            <a href="#" class="menu-button"><i class="fas fa-box"></i>Peticiones de Material</a><a href="#"
-                class="menu-button"><i class="fas fa-truck"></i>Registro de Pedidos</a><a href="#"
-                class="menu-button"><i class="fas fa-laptop"></i>Stock IT</a><a href="#" class="menu-button"><i
-                    class="fas fa-clipboard"></i>Stock
-                Oficina</a>
+            <a href="#" class="menu-button"><i class="fas fa-box"></i>Peticiones de Material</a>
+            <a href="#" class="menu-button"><i class="fas fa-truck"></i>Registro de Pedidos</a>
+            <a href="#" class="menu-button"><i class="fas fa-laptop"></i>Stock IT</a>
+            <a href="#" class="menu-button"><i class="fas fa-clipboard"></i>Stock Oficina</a>
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección Recursos Humanos -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">Recursos Humanos</div>
-            <a href="" id="btnFormAltas" class="menu-button"><i class="fas fa-user-plus"></i>Formulario de Altas</a><a
-                href="" id="btnFormBajas" class="menu-button"><i class="fas fa-user-minus"></i>Formulario de Bajas</a><a
-                href="/Menú-Principal/" class="menu-button"><i class="fas fa-box"></i>Formulario entrega de
-                material</a><a href="#" class="menu-button"><i class="fas fa-undo"></i>Formulario devolución de
-                material</a>
+            <a href="" id="btnFormAltas" class="menu-button"><i class="fas fa-user-plus"></i>Formulario de Altas</a>
+            <a href="" id="btnFormBajas" class="menu-button"><i class="fas fa-user-minus"></i>Formulario de Bajas</a>
+            <a href="/Menú-Principal/" class="menu-button"><i class="fas fa-box"></i>Formulario entrega de material</a>
+            <a href="#" class="menu-button"><i class="fas fa-undo"></i>Formulario devolución de material</a>
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección IT -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">IT</div>
             <a href="/Menú-Principal/Ticketing-marrones" class="menu-button"><i class="fas fa-tools"></i>Herramienta
-                Tickets</a><a href="#" class="menu-button"><i class="fas fa-key"></i>Cambiar Contraseña</a>
+                Tickets</a>
+            <a href="#" class="menu-button"><i class="fas fa-key"></i>Cambiar Contraseña</a>
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección Marketing -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">Marketing</div>
-            <a href="#" class="menu-button"><i class="fas fa-bullhorn"></i>Registro de incidencias</a><a href="#"
-                class="menu-button"><i class="fas fa-chart-line"></i>Plan de Marketing</a><a href="#"
-                class="menu-button"><i class="fas fa-ad"></i>Solicitar Material Publicitario</a>
+            <a href="#" class="menu-button"><i class="fas fa-bullhorn"></i>Registro de incidencias</a>
+            <a href="#" class="menu-button"><i class="fas fa-chart-line"></i>Plan de Marketing</a>
+            <a href="#" class="menu-button"><i class="fas fa-ad"></i>Solicitar Material Publicitario</a>
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección ATC -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">ATC</div>
@@ -98,9 +105,9 @@
             <a href="https://phone.norvoz.es/#/" class="menu-button"><i class="fas fa-phone"></i>Centralita Online</a>
             <a href="" id="btnFormIndustrial" class="menu-button"><i class="fas fa-industry"></i>Formulario
                 Industrial</a>
-
         </div>
         <div class="section-divider"></div>
+
         <!-- Sección Directorio de Usuarios -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">Directorio de Usuarios</div>
@@ -109,13 +116,19 @@
         </div>
         <div class="section-divider"></div>
     </div>
-    <!-- Botón para expandir/contraer --><button id="toggle-btn"
-        class="toggle-btn">→</button><!-- Contenido Principal -->
+
+    <!-- Botón para expandir/contraer -->
+    <button id="toggle-btn" class="toggle-btn">→</button>
+
+    <!-- Contenido Principal -->
     <main>
         <div id="contentContainer" class="contenedor">
             <p>Contenido principal</p>
+            <!-- Contenedor donde se cargará el formulario -->
+            <div id="form-container"></div>
         </div>
     </main>
+
     <script src="js/script.js"></script>
 </body>
 
