--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             <div class="section-title" style="pointer-events: none;">Recursos Humanos</div>
             <a href="" id="btnFormAltas" class="menu-button"><i class="fas fa-user-plus"></i>Formulario de Altas</a>
             <a href="" id="btnFormBajas" class="menu-button"><i class="fas fa-user-minus"></i>Formulario de Bajas</a>
-            <a href="/Menú-Principal/" class="menu-button"><i class="fas fa-box"></i>Formulario entrega de material</a>
-            <a href="#" class="menu-button"><i class="fas fa-undo"></i>Formulario devolución de material</a>
+            <a href="" class="menu-button"><i class="fas fa-box"></i>Formulario entrega de material</a>
+            <a href="" class="menu-button"><i class="fas fa-undo"></i>Formulario devolución de material</a>
         </div>
         <div class="section-divider"></div>
 
         <!-- Sección IT -->
         <div class="menu-section">
             <div class="section-title" style="pointer-events: none;">IT</div>
-            <a href="/Menú-Principal/Ticketing-marrones" class="menu-button"><i class="fas fa-tools"></i>Herramienta
+            <a href="" class="menu-button"><i class="fas fa-tools"></i>Herramienta
                 Tickets</a>
             <a href="#" class="menu-button"><i class="fas fa-key"></i>Cambiar Contraseña</a>
         </div>
@@ -129,7 +129,10 @@
         </div>
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="./Formularioaltas.js"></script>
+    <script src="./FormularioBajas.js"></script>
+    <script src="./FormularioIndustrial.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
