--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
         </div>
     </main>
 
-    <script src="./Formularioaltas.js"></script>
-    <script src="./FormularioBajas.js"></script>
-    <script src="./FormularioIndustrial.js"></script>
-    <script src="./script.js"></script>
+    <script src="js/FormularioAltas.js"></script>
+    <script src="js/FormularioBajas.js"></script>
+    <script src="js/FormularioIndustrial.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
