--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <label><input type="checkbox" id="recordarme" /> Recuérdame </label><a href="#">¿Olvidaste tu
                     contraseña?</a>
             </div>
-            <button id="botonLogin">Acceder</button>
+            <button id="botonLogin">Accede</button>
         </div>
     </div>
     
