--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
     </main>
 
     <!-- Scripts necesarios -->
-    <script src="/js/script.js" type="module"></script> <!-- El JS principal -->
-    <script src="/js/FormularioAltas.js" type="module"></script> <!-- El JS para el formulario de Altas -->
-    <script src="/js/FormularioBajas.js" type="module"></script> <!-- El JS para el formulario de Bajas -->
-    <script src="/js/FormularioIndustrial.js" type="module"></script> <!-- El JS para el formulario de Industrial -->
+    <script src="js/script.js" type="module"></script> <!-- El JS principal -->
+    <script src="js/FormularioAltas.js" type="module"></script> <!-- El JS para el formulario de Altas -->
+    <script src="js/FormularioBajas.js" type="module"></script> <!-- El JS para el formulario de Bajas -->
+    <script src="js/FormularioIndustrial.js" type="module"></script> <!-- El JS para el formulario de Industrial -->
 
 </body>
 
