--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     alt="Logo Marrones" loading="lazy" />
             </a>
         </div>
-        <div class="menu-header">Menú Principal</div>
+        <div class="menu-header">PRUEBAS</div>
         <div id="profileButton" class="profile-button" aria-label="Abrir menú de perfil" aria-haspopup="true" aria-expanded="false">
             <span class="material-icons">account_circle</span>
         </div>
