--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
     <!-- Cargar el script de MSAL.js (Este debe ser el primer script que cargue) -->
     <script src="https://cdn.jsdelivr.net/npm/@azure/msal-browser@2.28.0/dist/msal-browser.min.js"></script>
     <!-- Cargar el script de tu login.js (Este se debe cargar después de msal.js) -->
-    <script src="../js/login.js" defer></script>
+    <script src="/js/login.js" defer></script>
     <title>Login Intranet Marrones</title>
 </head>
 
